WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193466
Fix incorrect ASSERT added in
r239840
https://bugs.webkit.org/show_bug.cgi?id=193466
Summary
Fix incorrect ASSERT added in r239840
Eric Carlson
Reported
2019-01-15 15:01:48 PST
UserMediaCaptureManager::Source::Source asserts when creating an Audio stream.
Attachments
Patch
(1.68 KB, patch)
2019-01-15 15:08 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.53 KB, patch)
2019-01-15 15:29 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2019-01-15 15:04:30 PST
<
rdar://problem/47095142
>
Eric Carlson
Comment 2
2019-01-15 15:08:01 PST
Created
attachment 359209
[details]
Patch
youenn fablet
Comment 3
2019-01-15 15:15:43 PST
Comment on
attachment 359209
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=359209&action=review
> Source/WebKit/WebProcess/cocoa/UserMediaCaptureManager.cpp:65 > + ASSERT(deviceType == CaptureDevice::DeviceType::Camera || deviceType == CaptureDevice::DeviceType::Screen || deviceType == CaptureDevice::DeviceType::Window || deviceType == CaptureDevice::DeviceType::Microphone);
Should it be ASSERT(deviceType != CaptureDevice::DeviceType::Unknown)?
Eric Carlson
Comment 4
2019-01-15 15:28:16 PST
Comment on
attachment 359209
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=359209&action=review
>> Source/WebKit/WebProcess/cocoa/UserMediaCaptureManager.cpp:65 >> + ASSERT(deviceType == CaptureDevice::DeviceType::Camera || deviceType == CaptureDevice::DeviceType::Screen || deviceType == CaptureDevice::DeviceType::Window || deviceType == CaptureDevice::DeviceType::Microphone); > > Should it be ASSERT(deviceType != CaptureDevice::DeviceType::Unknown)?
Good idea, thanks.
Eric Carlson
Comment 5
2019-01-15 15:29:32 PST
Created
attachment 359213
[details]
Patch for landing
WebKit Commit Bot
Comment 6
2019-01-15 16:08:58 PST
Comment on
attachment 359213
[details]
Patch for landing Clearing flags on attachment: 359213 Committed
r240017
: <
https://trac.webkit.org/changeset/240017
>
WebKit Commit Bot
Comment 7
2019-01-15 16:09:00 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug