Fix incorrect ASSERT added in r239840 https://bugs.webkit.org/show_bug.cgi?id=193466 <rdar://problem/47095142>

Reviewed by Youenn Fablet.

* WebProcess/cocoa/UserMediaCaptureManager.cpp:
(WebKit::UserMediaCaptureManager::Source::Source):


Canonical link: https://commits.webkit.org/207980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240017 268f45cc-cd09-0410-ab3c-d52691b4dbfc